crates/test-framework/src/snapshot/snapshots/explain/test_framework__snapshot__file[parquet]-duckdb[file]-on_zero_results_small_clickbench_q31_explain.snap
---
source: crates/test-framework/src/snapshot/mod.rs
description: "Query: clickbench_q31"
---
+---------------+-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                                                                                                                                                  |
+---------------+-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| logical_plan  | Sort: c DESC NULLS FIRST, fetch=10                                                                                                                                                                                    |
|               |   Projection: hits.SearchEngineID, hits.ClientIP, count(Int64(1)) AS c, sum(hits.IsRefresh), avg(hits.ResolutionWidth)                                                                                                |
|               |     Aggregate: groupBy=[[hits.SearchEngineID, hits.ClientIP]], aggr=[[count(Int64(1)), sum(CAST(hits.IsRefresh AS Int64)), avg(CAST(hits.ResolutionWidth AS Float64))]]                                               |
|               |       Projection: hits.ClientIP, hits.IsRefresh, hits.ResolutionWidth, hits.SearchEngineID                                                                                                                            |
|               |         Filter: CAST(hits.SearchPhrase AS Utf8View) != Utf8View("")                                                                                                                                                   |
|               |           TableScan: hits projection=[ClientIP, IsRefresh, ResolutionWidth, SearchEngineID, SearchPhrase], partial_filters=[CAST(hits.SearchPhrase AS Utf8View) != Utf8View("")]                                      |
| physical_plan | SortExec: TopK(fetch=10), expr=[c@2 DESC], preserve_partitioning=[false]                                                                                                                                              |
|               |   CoalescePartitionsExec                                                                                                                                                                                              |
|               |     ProjectionExec: expr=[SearchEngineID@0 as SearchEngineID, ClientIP@1 as ClientIP, count(Int64(1))@2 as c, sum(hits.IsRefresh)@3 as sum(hits.IsRefresh), avg(hits.ResolutionWidth)@4 as avg(hits.ResolutionWidth)] |
|               |       AggregateExec: mode=FinalPartitioned, gby=[SearchEngineID@0 as SearchEngineID, ClientIP@1 as ClientIP], aggr=[count(Int64(1)), sum(hits.IsRefresh), avg(hits.ResolutionWidth)]                                  |
|               |         RepartitionExec: partitioning=Hash([SearchEngineID@0, ClientIP@1], 16), input_partitions=16                                                                                                                   |
|               |           AggregateExec: mode=Partial, gby=[SearchEngineID@3 as SearchEngineID, ClientIP@0 as ClientIP], aggr=[count(Int64(1)), sum(hits.IsRefresh), avg(hits.ResolutionWidth)]                                       |
|               |             FilterExec: CAST(SearchPhrase@4 AS Utf8View) != , projection=[ClientIP@0, IsRefresh@1, ResolutionWidth@2, SearchEngineID@3]                                                                               |
|               |               RepartitionExec: partitioning=RoundRobinBatch(16), input_partitions=1                                                                                                                                   |
|               |                 SchemaCastScanExec                                                                                                                                                                                    |
|               |                   FallbackOnZeroResultsScanExec                                                                                                                                                                       |
|               |                     CoalescePartitionsExec                                                                                                                                                                            |
|               |                       RepartitionExec: partitioning=RoundRobinBatch(16), input_partitions=1                                                                                                                           |
|               |                         BytesProcessedExec                                                                                                                                                                            |
|               |                           DuckSqlExec sql= SELECT "ClientIP", "IsRefresh", "ResolutionWidth", "SearchEngineID", "SearchPhrase" FROM "hits"                                                                            |
|               |                                                                                                                                                                                                                       |
+---------------+-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
