crates/test-framework/src/snapshot/snapshots/explain/test_framework__snapshot__file[parquet]-duckdb[file]-on_zero_results_small_clickbench_q35_explain.snap
---
source: crates/test-framework/src/snapshot/mod.rs
description: "Query: clickbench_q35"
---
+---------------+-------------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                      |
+---------------+-------------------------------------------------------------------------------------------+
| logical_plan  | Sort: c DESC NULLS FIRST, fetch=10                                                        |
|               |   Projection: Int64(1), hits.URL, count(Int64(1)) AS c                                    |
|               |     Aggregate: groupBy=[[hits.URL]], aggr=[[count(Int64(1))]]                             |
|               |       TableScan: hits projection=[URL]                                                    |
| physical_plan | SortExec: TopK(fetch=10), expr=[c@2 DESC], preserve_partitioning=[false]                  |
|               |   CoalescePartitionsExec                                                                  |
|               |     ProjectionExec: expr=[1 as Int64(1), URL@0 as URL, count(Int64(1))@1 as c]            |
|               |       AggregateExec: mode=FinalPartitioned, gby=[URL@0 as URL], aggr=[count(Int64(1))]    |
|               |         RepartitionExec: partitioning=Hash([URL@0], 16), input_partitions=16              |
|               |           AggregateExec: mode=Partial, gby=[URL@0 as URL], aggr=[count(Int64(1))]         |
|               |             RepartitionExec: partitioning=RoundRobinBatch(16), input_partitions=1         |
|               |               SchemaCastScanExec                                                          |
|               |                 FallbackOnZeroResultsScanExec                                             |
|               |                   CoalescePartitionsExec                                                  |
|               |                     RepartitionExec: partitioning=RoundRobinBatch(16), input_partitions=1 |
|               |                       CooperativeExec                                                     |
|               |                         BytesProcessedExec                                                |
|               |                           DuckSqlExec sql= SELECT "URL" FROM hits                         |
|               |                                                                                           |
+---------------+-------------------------------------------------------------------------------------------+
